--- a/vignettes/riborex.Rmd
+++ b/vignettes/riborex.Rmd
@@ -1,6 +1,7 @@
 ---
 title: "Riborex Manual"
 author: Wenzheng Li, Weili Wang, Philip J. Uren, Luiz OF Penalva, Andrew D. Smith 
+date: "`r format(Sys.time(), '%d %B, %Y')`"
 output: pdf_document
 ---
 
